--- a/home.html
+++ b/home.html
@@ -51,13 +51,13 @@
                      <div class="row">
                         <div class="col-xs-12">
                            <a href="home.html" class="logo"> <img class="logo__img img-responsive" src="assets/nla.png" height="50" width="111" alt="Logo"> </a>
-                           <div class="header-contacts"> <span class="header-contacts__item"><i class="icon fa fa-phone"></i>+ 987 654 3210</span> <a class="header-contacts__item" href="mailto:contact@nextlaneauto.com"><i class="icon fa fa-envelope"></i>contact@nextlaneauto.com</a> </div>
+                           <div class="header-contacts"> <span class="header-contacts__item"><i class="icon fa fa-phone"></i>(516) 912-6413 </span> <a class="header-contacts__item" href="mailto:sales@nextlaneauto.com"><i class="icon fa fa-envelope"></i>sales@nextlaneauto.com</a> </div>
                            <ul class="social-links list-inline">
-                              <li><a class="icon fa fa-facebook" href="javascript:void(0);"></a></li>
-                              <li><a class="icon fa fa-twitter" href="javascript:void(0);"></a></li>
-                              <li><a class="icon fa fa-youtube-play" href="javascript:void(0);"></a></li>
-                              <li><a class="icon fa fa-instagram" href="javascript:void(0);"></a></li>
-                              <li><a class="icon fa fa-google-plus" href="javascript:void(0);"></a></li>
+                              <li><a class="icon fa fa-facebook" href="https://www.facebook.com/share/1BQfSxZhQk/?mibextid=wwXIfr"></a></li>
+                            <!--  <li><a class="icon fa fa-twitter" href="javascript:void(0);"></a></li> -->
+                              <li><a class="icon fa fa-youtube-play" href="https://www.youtube.com/@NextLaneAuto"></a></li>
+                              <li><a class="icon fa fa-instagram" href="https://www.instagram.com/nextlaneauto/?igsh=MXhvZGxnMDh4dW1wYQ%3D%3D&utm_source=qr"></a></li>
+                             <!-- <li><a class="icon fa fa-google-plus" href="javascript:void(0);"></a></li> -->
                            </ul>
                         </div>
                         <!-- end col --> 
@@ -1235,17 +1235,18 @@
                            <div class="row">
                               <div class="col-xs-12">
                                  <div class="footer__name">: SHOWROOM LOCATION :</div>
-                                 <div class="footer__text">32 Market St.128, Deeja Town, Florida, CA 12345</div>
+                                 <div class="footer__text">1430 Broadway STE 1200 New York, NY 10018</div>
                               </div>
                               <!-- end col --> 
                            </div>
                            <!-- end row -->
                            <div class="row">
                               <div class="col-xs-12">
-                                 <div class="footer__item"> <span class="footer__name">Phone:</span> <span class="footer__text">+1 (234) 567 8900</span> </div>
-                                 <div class="footer__item"> <span class="footer__name">Fax:</span> <span class="footer__text">+1 (234) 567 8998</span> </div>
-                                 <div class="footer__item"> <span class="footer__name">email:</span> <span class="footer__text">contact@nextlaneauto.com</span> </div>
-                                 <div class="footer__item"> <span class="footer__name">Hours:</span> <span class="footer__text">Mon - Fri :: 9am - 6pm</span> </div>
+                                 <div class="footer__item"> <span class="footer__name">Phone:</span> <span class="footer__text">(516) 912-6413</span> </div>
+                                <!-- <div class="footer__item"> <span class="footer__name">Fax:</span> <span class="footer__text">+1 (234) 567 8998</span> </div> -->
+                                 <div class="footer__item"> <span class="footer__name">email:</span> <span class="footer__text">sales@nextlaneauto.com</span> </div>
+                                 <div class="footer__item"> <span class="footer__name">Hours:</span> <span class="footer__text">Mon - Fri :: 9am - 5pm</span> </div>
+                                 <div class="footer__item"> <span class="footer__name">Hours:</span> <span class="footer__text">Sat - Sun :: 10am - 4pm</span> </div>
                               </div>
                               <!-- end col --> 
                            </div>
@@ -1253,11 +1254,11 @@
                            <div class="row">
                               <div class="col-xs-12">
                                  <ul class="social-links list-inline">
-                                    <li><a class="icon fa fa-facebook" href="javascript:void(0);"></a></li>
-                                    <li><a class="icon fa fa-twitter" href="javascript:void(0);"></a></li>
-                                    <li><a class="icon fa fa-youtube-play" href="javascript:void(0);"></a></li>
-                                    <li><a class="icon fa fa-instagram" href="javascript:void(0);"></a></li>
-                                    <li><a class="icon fa fa-google-plus" href="javascript:void(0);"></a></li>
+                                    <li><a class="icon fa fa-facebook" href="https://www.facebook.com/share/1BQfSxZhQk/?mibextid=wwXIfr"></a></li>
+                                   <!-- <li><a class="icon fa fa-twitter" href="javascript:void(0);"></a></li> -->
+                                    <li><a class="icon fa fa-youtube-play" href="https://www.youtube.com/@NextLaneAuto"></a></li>
+                                    <li><a class="icon fa fa-instagram" href="https://www.instagram.com/nextlaneauto/?igsh=MXhvZGxnMDh4dW1wYQ%3D%3D&utm_source=qr"></a></li>
+                                  <!--  <li><a class="icon fa fa-google-plus" href="javascript:void(0);"></a></li> -->
                                  </ul>
                               </div>
                               <!-- end col --> 
